        AcmeAuthorization.acme_order_2_acme_challenge_type_specifics
        AcmeChallenge.acme_order_2_acme_challenge_type_specifics
    Bugfixes:
        This library was developed against the Pebble ACME test server from LetsEncrypt.
        Boulder is the ACME production server from LetsEncrypt.
        There were several undocumented differences between the Pebble and Boulder servers.

    Still working:
        remove  acme_challenge_type_specific__acme_order_created
        de-emphasize acme_order_id__created
        see:                 # TODO: update the AcmeOrders





0.4.0
- 2020/08/06
- Added routes for auditing certificate procurement
    `/acme-order/{ID}/audit`
    `/acme-order/{ID}/audit.json`
- tests for PrivateKey cycling
- renamed form fields for clarity:
    - "private_key_cycle" -> "account_key__private_key_cycle"
    - "contact" -> "account__contact"
- added "resolved" AcmeChallenge search
- added "processing" AcmeChallenge search
- updated config validation on:
    `queue_domains_min_per_cert`
    `queue_domains_max_per_cert`
- removed "returned" exception objects, which were a terrible idea
- updated (json.dumps) to use `sort_keys=True` as needed
- (queue-domains/process(.json)?) working and tested
- `acme-order/new/automated` is now `acme-order/new/freeform`
- slight reorganization of queue-certificates listing and logic
- creating queue-certificates/structured largely done
- consolidated domain blacklist checks to a new `validate` file
- split AcmeAccountKey into AcmeAccount+AcmeAccountKey to support key cycling/rollover (in the future)
    - "account_key__private_key_cycle" -> "account__private_key_cycle"
    AcmeOrder:
        acme_account_key_id -> acme_account_id
        acme_account_key -> acme_account
    ServerCertificate:
        acme_account_key_id -> acme_account_id
        acme_account_key -> acme_account
    QueueCertificate:
        acme_account_key_id -> acme_account_id
        acme_account_key -> acme_account